<resources>
    <string name="app_name">Workout Log</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="workout_label">Workouts</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_workout_fragment_label">Add Workout</string>
    <string name="add_exercise_fragment_label">Add Exercise</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="exercises">Exercises</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- text in fragments -->
    <string name="workout_name">Workout Session Name</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="number_of_reps"># Reps</string>
    <string name="lbs">lbs</string>
    <string name="save">Save</string>
    <string name="set1">Set 1</string>
    <string name="set2">Set 2</string>
    <string name="set3">Set 3</string>
    <string name="set4">Set 4</string>
    <string name="set5">Set 5</string>
    <string name="set6">Set 6</string>
    <string name="set7">Set 7</string>
    <string name="set8">Set 8</string>

    <!-- placeholder for database workouts -->
    <string name="workout1">Workout 1</string>
    <string name="workout2">Workout 2</string>
    <string name="workout3">Workout 3</string>
    <string name="workout4">Workout 4</string>
    <string name="workout5">Workout 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_question">Are you sure you want to delete this workout?</string>
    <string name="delete_exercise_question">Are you sure you want to delete this exercise?</string>
    <string name="attention">Attention</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="edit_fragment_title">Edit Workout</string>
    <string name="add_fragment_title">Add Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="max_weight">Max Weight:</string>
    <string name="volume_graph">Volume Graph</string>
    <string name="y_label">"Volume (lb*sets*reps)"</string>


</resources>