<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.workoutlog.MainActivity">
    <item
        android:id="@+id/action_deleteWorkout"
        android:orderInCategory="200"
        android:title="@string/delete_workout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_editWorkout"
        android:orderInCategory="100"
        android:title="@string/edit_workout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_addExercise"
        android:orderInCategory="100"
        android:title="@string/add_exercise"
        app:showAsAction="ifRoom" />

</menu>